@@ -10,20 +10,20 @@ pipeline {
 
     parameters {
         string( name: 'jdkVersion',
-                defaultValue: 'OpenJDK 11.0.12',
+                defaultValue: Globals.jdk17Version,
                 description: 'Configuration to run server on an environment with designated jdk version')
-        string(name: 'slaveNode', defaultValue: 'xlr||xld', description: 'Node label where steps would be executed.')
+        string(name: 'slaveNode', defaultValue: 'xld', description: 'Node label where steps would be executed.')
     }
     environment {
         REPOSITORY_NAME = 'overthere'
-        GRADLE_OPTS = "-XX:MaxPermSize=256m -Xmx1024m  -Djsse.enableSNIExtension=true"
+        GRADLE_OPTS = "-XX:MaxMetaspaceSize=256m -Xmx1024m  -Djsse.enableSNIExtension=true"
     }
 
     stages {
         stage('Run test') {
             agent { label params.slaveNode }
             steps {
-                withEnv(Globals.java11Env(this, params.jdkVersion)) {
+                withEnv(Globals.java17Env(this, Globals.jdk17Version)) {
                     sh "./gradlew clean test"
                 }
             }
@@ -31,7 +31,7 @@ pipeline {
         stage('Run integration test') {
             agent { label params.slaveNode }
             steps {
-                withEnv(Globals.java11Env(this, params.jdkVersion)) {
+                withEnv(Globals.java17Env(this, Globals.jdk17Version)) {
                     sh "./gradlew clean itest"
                 }
             }
